# shade-awesome

./: CMakeLists.txt  CMakePresets.json  README.md  log.txt  vcpkg.json
src/: ParticleFluidSketch.ixx  main.cpp  precompiled.h
src/FftRaysSketch/: FftRaysSketch.ixx
src/GridFluidSketch/: GridFluidSketch.ixx
src/MultiscaleGrowthSketch/: MultiscaleGrowthSketch.ixx  ThisSketch_ImageProcessingHelpers.ixx  gpuBlurClaude.ixx  multiscaleGrowthConfig.toml
src/ParticleTraces2DSketch/: ParticleTraces2DSketch.ixx
src/VarianceAddSketch/: VarianceAddSketch.ixx
src/lxlib/: Array2D_imageProc.ixx  ConfigManager3.ixx  KissFFTWrapper.ixx  SketchScaffold.ixx  TextureRef.ixx  VkFftWrapper.ixx  gpgpu.ixx  gpuBlur.ixx  miniaudio.cpp  shade.ixx  stuff.ixx
